--- a/index.html
+++ b/index.html
@@ -1,7 +1,23 @@
 <!DOCTYPE html>
 <html>
+<head>
+	<meta charset="utf-8">
+	<title>test</title>
+	<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
+
+</head>
 <body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+	<script>
+        $(function() {
+            $.ajax({
+                method: "get",
+                url: "https://cat-match.easygame2021.com/sheep/v1/game/game_over?t=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE2OTQ0MDc2MjgsIm5iZiI6MTY2MzMwNTQyOCwiaWF0IjoxNjYzMzAzNjI4LCJqdGkiOiJDTTpjYXRfbWF0Y2g6bHQxMjM0NTYiLCJvcGVuX2lkIjoiIiwidWlkIjozNzAxNjU5LCJkZWJ1ZyI6IiIsImxhbmciOiIifQ.KJuk302OlHNa6YX8wRxdG-Z7De4bbF7XLFhcAsnLJeA&rank_score=1&rank_state=1&rank_time=888&rank_role=1&skin=1"
+                success: function(res) {
+                    console.log(res)
+                }
+            })
+        })
+    </script>
+
 </body>
 </html>
