--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         $(function() {
             $.ajax({
                 method: "get",
-                url: "https://cat-match.easygame2021.com/sheep/v1/game/game_over?t=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE2OTQ0MDc2MjgsIm5iZiI6MTY2MzMwNTQyOCwiaWF0IjoxNjYzMzAzNjI4LCJqdGkiOiJDTTpjYXRfbWF0Y2g6bHQxMjM0NTYiLCJvcGVuX2lkIjoiIiwidWlkIjozNzAxNjU5LCJkZWJ1ZyI6IiIsImxhbmciOiIifQ.KJuk302OlHNa6YX8wRxdG-Z7De4bbF7XLFhcAsnLJeA&rank_score=1&rank_state=1&rank_time=888&rank_role=1&skin=1"
+                url: "https://cat-match.easygame2021.com/sheep/v1/game/game_over?t=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJleHAiOjE2OTQ0MDc2MjgsIm5iZiI6MTY2MzMwNTQyOCwiaWF0IjoxNjYzMzAzNjI4LCJqdGkiOiJDTTpjYXRfbWF0Y2g6bHQxMjM0NTYiLCJvcGVuX2lkIjoiIiwidWlkIjozNzAxNjU5LCJkZWJ1ZyI6IiIsImxhbmciOiIifQ.KJuk302OlHNa6YX8wRxdG-Z7De4bbF7XLFhcAsnLJeA&rank_score=1&rank_state=1&rank_time=888&rank_role=1&skin=1",
                 success: function(res) {
                     console.log(res)
                 }
