--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
 </body>
 
 <script type="text/javascript">
-	let token = document.getElementById('token').value;
-	let btn = document.getElementById("#btn");
+	let token = document.querySelector('token').value;
 	let url = 'https://cat-match.easygame2021.com/sheep/v1/game/game_over?t='+token;
+	let btn = document.querySelector("#btn");
         btn.addEventListener("click",function (params) {
             axios.get(url).then(function (res) {
                 var data = res.data;
