--- a/ylgy.html
+++ b/ylgy.html
@@ -34,7 +34,7 @@ h2 {margin: 5rem;}
   <div class="layui-form-item">
 					<label class="layui-input-block">次数:</label>
 			<div class="layui-input-block">
-					<input class="layui-input"  required  lay-verify="required" type="text" id="num">1</input>
+					<input class="layui-input"  required  lay-verify="required" type="text" id="num" value="1"></input>
 
 			</div>
 
