--- a/ylgy.html
+++ b/ylgy.html
@@ -19,7 +19,7 @@ h2 {margin: 5rem;}
 <body>
 
 	<h2 align="center">羊了个羊闯关</h2>
-	<form class="layui-form" action="">
+	<div class="layui-form">
 
   <div class="layui-form-item">
   	
@@ -44,7 +44,6 @@ h2 {margin: 5rem;}
   <button class="layui-btn layui-btn-primary layui-border-red" id="numbt1">1次</button> 
   <button class="layui-btn layui-btn-primary layui-border-red" id="numbt2">3次</button>
   <button class="layui-btn layui-btn-primary layui-border-red" id="numbt3">10次</button>
-  <button class="layui-btn layui-btn-primary layui-border-red" id="numbt4">100次</button>
       </div>
   </div>
 
@@ -62,7 +61,7 @@ h2 {margin: 5rem;}
   </div>
 
 					
-</form>
+</div>
 </body>
 
 <script type="text/javascript">
