--- a/ylgy.html
+++ b/ylgy.html
@@ -12,7 +12,7 @@
 
 h2 {margin: 3rem;}
 .layui-form {margin-right: 3rem;margin-left: -3rem;}
-.layui-input-block{margin-top: 0.5rem;}
+.layui-input-block{margin-top: 1rem;}
 </style>
 
 </head>
@@ -27,14 +27,17 @@ h2 {margin: 3rem;}
 	      	<label class="layui-input-block">token:</label>
 	      <div class="layui-input-block">
 	      	
-					<textarea id="token" placeholder="请输入token" required  lay-verify="required" class="layui-textarea" rows="6"></textarea>
+					<textarea id="token" placeholder="请输入token" required  lay-verify="required" class="layui-textarea" rows="8"></textarea>
 				</div>
 
 	</div>
   <div class="layui-form-item">
 					<label class="layui-input-block">次数:</label>
-			<div class="layui-input-block">
+			<div class="layui-input-inline">
 					<input class="layui-input"  required  lay-verify="required" type="text" id="num" value="1"></input>
+					<button class="layui-btn layui-btn-primary layui-border-red" id="numbt1">1次</button> 
+  <button class="layui-btn layui-btn-primary layui-border-red" id="numbt2">3次</button>
+  <button class="layui-btn layui-btn-primary layui-border-red" id="numbt3">10次</button>
 
 			</div>
 
