--- a/ylgy.html
+++ b/ylgy.html
@@ -34,21 +34,11 @@ h2 {margin: 3rem;}
   <div class="layui-form-item">
 					<label class="layui-input-block">次数:</label>
 			<div class="layui-input-block">
-					<input class="layui-input" width="10px" required  lay-verify="required" type="text" id="num" value="1"></input>
-					<button class="layui-btn layui-btn-primary layui-border-red" id="numbt1">1次</button> 
-  <button class="layui-btn layui-btn-primary layui-border-red" id="numbt2">3次</button>
-  <button class="layui-btn layui-btn-primary layui-border-red" id="numbt3">10次</button>
-
+					<input class="layui-input" required  lay-verify="required" type="text" id="num" value="1"></input>
 			</div>
 
   </div>
-<div class="layui-form-item" align="center">
-    <div class="layui-input-block">
-  <button class="layui-btn layui-btn-primary layui-border-red" id="numbt1">1次</button> 
-  <button class="layui-btn layui-btn-primary layui-border-red" id="numbt2">3次</button>
-  <button class="layui-btn layui-btn-primary layui-border-red" id="numbt3">10次</button>
-      </div>
-  </div>
+
 
    <div class="layui-form-item" align="center">
     <div class="layui-input-block">
