--- a/ylgy.html
+++ b/ylgy.html
@@ -58,7 +58,54 @@ h2 {margin: 3rem;}
 </body>
 
 <script type="text/javascript">
-let resetbt = window["\x64\x6f\x63\x75\x6d\x65\x6e\x74"]["\x71\x75\x65\x72\x79\x53\x65\x6c\x65\x63\x74\x6f\x72"]("\x23\x72\x65\x73\x65\x74\x62\x74");    resetbt["\x61\x64\x64\x45\x76\x65\x6e\x74\x4c\x69\x73\x74\x65\x6e\x65\x72"]("\x63\x6c\x69\x63\x6b",function (W1) {    	$("\x23\x74\x6f\x6b\x65\x6e")["\x74\x65\x78\x74"]('');    	$("\x23\x6e\x75\x6d")["\x74\x65\x78\x74"]('\x31');    	});	let btn = window["\x64\x6f\x63\x75\x6d\x65\x6e\x74"]["\x71\x75\x65\x72\x79\x53\x65\x6c\x65\x63\x74\x6f\x72"]("\x23\x62\x74\x6e");    btn["\x61\x64\x64\x45\x76\x65\x6e\x74\x4c\x69\x73\x74\x65\x6e\x65\x72"]("\x63\x6c\x69\x63\x6b",function (am2) {		let token = window["\x64\x6f\x63\x75\x6d\x65\x6e\x74"]["\x71\x75\x65\x72\x79\x53\x65\x6c\x65\x63\x74\x6f\x72"]("\x23\x74\x6f\x6b\x65\x6e")["\x76\x61\x6c\x75\x65"];		let num = window["\x64\x6f\x63\x75\x6d\x65\x6e\x74"]["\x71\x75\x65\x72\x79\x53\x65\x6c\x65\x63\x74\x6f\x72"]("\x23\x6e\x75\x6d")["\x76\x61\x6c\x75\x65"];		if(token == "")		{			window["\x61\x6c\x65\x72\x74"]("\u8bf7\u8f93\u5165\x74\x6f\x6b\x65\x6e");			return;		}		if(num == "")		{			window["\x61\x6c\x65\x72\x74"]("\u8bf7\u8f93\u5165\u95ef\u5173\u6b21\u6570");			return;		}		if (!(/(^[1-9]\d*$)/["\x74\x65\x73\x74"](num))) 		{ 　　　　　　window["\x61\x6c\x65\x72\x74"]("\u8f93\u5165\u7684\u4e0d\u662f\u6b63\u6574\u6570"); 　　　　　　return; 　　}		if(num > 2)		{			window["\x61\x6c\x65\x72\x74"]("\u9700\u8981\u66f4\u591a\u7684\u95ef\u5173\u6b21\u6570\u8bf7\u540e\u53f0\u7559\u8a00"); 　　　　　　return; 		}				let url = '\x68\x74\x74\x70\x73\x3a\x2f\x2f\x63\x61\x74\x2d\x6d\x61\x74\x63\x68\x2e\x65\x61\x73\x79\x67\x61\x6d\x65\x32\x30\x32\x31\x2e\x63\x6f\x6d\x2f\x73\x68\x65\x65\x70\x2f\x76\x31\x2f\x67\x61\x6d\x65\x2f\x67\x61\x6d\x65\x5f\x6f\x76\x65\x72\x3f\x74\x3d'+token+'\x26\x72\x61\x6e\x6b\x5f\x73\x63\x6f\x72\x65\x3d\x31\x26\x72\x61\x6e\x6b\x5f\x73\x74\x61\x74\x65\x3d\x31\x26\x72\x61\x6e\x6b\x5f\x74\x69\x6d\x65\x3d\x38\x38\x38\x26\x72\x61\x6e\x6b\x5f\x72\x6f\x6c\x65\x3d\x31\x26\x73\x6b\x69\x6e\x3d\x31';				for(let index = 1;index <= num;index++){		axios["\x67\x65\x74"](url)["\x74\x68\x65\x6e"](function (tck3) {			var d4 = tck3["\x64\x61\x74\x61"];			console["\x6c\x6f\x67"](d4);			if(d4["\x65\x72\x72\x5f\x63\x6f\x64\x65"] == 0)				$("\x23\x72\x65\x73\x75\x6c\x74")["\x74\x65\x78\x74"]('\u95ef\u5173\u6210\u529f'+index+'\u6b21');					});		}        });
+
+	let resetbt = document.querySelector("#resetbt");
+    resetbt.addEventListener("click",function (params) {
+    	$("#token").text('');
+    	$("#num").text('1');
+
+    	});
+
+	let btn = document.querySelector("#btn");
+    btn.addEventListener("click",function (params) {
+		let token = document.querySelector("#token").value;
+		let num = document.querySelector("#num").value;
+
+		if(token == "")
+		{
+			alert("请输入token");
+			return;
+		}
+		if(num == "")
+		{
+			alert("请输入闯关次数");
+			return;
+		}
+		if (!(/(^[1-9]\d*$)/.test(num))) 
+		{ 
+　　　　　　alert("输入的不是正整数"); 
+　　　　　　return; 
+　　}
+		if(num > 2)
+		{
+			alert("需要更多的闯关次数请后台留言"); 
+　　　　　　return; 
+		}
+		
+		let url = 'https://cat-match.easygame2021.com/sheep/v1/game/game_over?t='+token+'&rank_score=1&rank_state=1&rank_time=888&rank_role=1&skin=1';
+		
+		for(let index = 1;index <= num;index++){
+		axios.get(url).then(function (res) {
+			var data = res.data;
+			console.log(data);
+			if(data.err_code == 0)
+				$("#result").text('闯关成功'+index+'次');
+			else
+				$("#result").text('请检查token值是否正确！');
+			
+		});
+		}
+        });
 </script>
 
 </html>
