--- a/ylgy.html
+++ b/ylgy.html
@@ -10,7 +10,7 @@
 	<script src="//unpkg.com/layui@2.7.6/dist/layui.js"></script>
 	<style type="text/css">
 
-h2 {margin: 3rem;}
+h2 {margin: 2rem;}
 .layui-form {margin-right: 3rem;margin-left: -3rem;}
 .layui-input-block{margin-top: 1rem;}
 </style>
@@ -24,10 +24,10 @@ h2 {margin: 3rem;}
   <div class="layui-form-item">
   	
 
-	      	<label class="layui-input-block">token:</label>
+	      	<label class="layui-input-block">token（获取方法公众号回复：抓包）</label>
 	      <div class="layui-input-block">
 	      	
-					<textarea id="token" placeholder="请输入token" required  lay-verify="required" class="layui-textarea" rows="8"></textarea>
+					<textarea id="token" placeholder="请输入token" required  lay-verify="required" class="layui-textarea" rows="6"></textarea>
 				</div>
 
 	</div>
@@ -47,14 +47,14 @@ h2 {margin: 3rem;}
     </div>
   </div>
 
-   <div class="layui-form-item">
+   <div class="layui-form-item" align="center">
     <div class="layui-input-block">
       <h6 id="result"></h6>
     </div>
   </div>
-
-					
 </div>
+
+<div align="center"><img src="images/qrcode.jpg" width="100px"></div>		
 </body>
 
 <script type="text/javascript">
