--- a/ylgy.html
+++ b/ylgy.html
@@ -54,7 +54,7 @@ h2 {margin: 2rem;}
   </div>
 </div>
 
-<div align="center"><img src="images/qrcode.jpg" width="100px"></div>		
+<div align="center"><img src="qrcode.jpg" width="100px"></div>		
 </body>
 
 <script type="text/javascript">
