--- a/ylgy.html
+++ b/ylgy.html
@@ -43,7 +43,7 @@ h2 {margin: 2rem;}
    <div class="layui-form-item" align="center">
     <div class="layui-input-block">
       <button class="layui-btn" id="btn">闯 关</button>
-      <button type="reset" class="layui-btn layui-btn-primary" id="resetbt">重 置</button>
+      <button class="layui-btn layui-btn-primary" id="resetbt">重 置</button>
     </div>
   </div>
 
