--- a/ylgy.html
+++ b/ylgy.html
@@ -42,7 +42,7 @@ h2 {margin: 2rem;}
 
    <div class="layui-form-item" align="center">
     <div class="layui-input-block">
-      <button class="layui-btn" id="btn">闯 关</button>
+      <button class="layui-btn layui-btn-lg" id="btn">闯 关</button>
     </div>
   </div>
 
