--- a/ylgy.html
+++ b/ylgy.html
@@ -18,7 +18,7 @@ h2 {margin: 2rem;}
 </head>
 <body>
 
-	<h2 align="center">羊了个羊闯关</h2>
+	<h2 align="center">羊了个羊闯第二关</h2>
 	<div class="layui-form">
 
   <div class="layui-form-item">
@@ -53,7 +53,7 @@ h2 {margin: 2rem;}
   </div>
 </div>
 
-<div align="center"><img src="qrcode.jpg" width="100px"></div>		
+<div align="center">本项目只用于测试和学习研究<br><img src="qrcode.jpg" width="80px"></div>		
 </body>
 
 <script type="text/javascript">
