--- a/ylgy.html
+++ b/ylgy.html
@@ -53,7 +53,7 @@ h2 {margin: 2rem;}
   </div>
 </div>
 
-<div align="center">本项目只用于测试和学习研究<br><img src="qrcode.jpg" width="80px"></div>		
+<div align="center"><img src="qrcode.jpg" width="80px"><br>本项目只用于测试和学习研究，更多内容扫码关注公众号</div>		
 </body>
 
 <script type="text/javascript">
