--- a/ylgy.html
+++ b/ylgy.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>test</title>
+	<title>羊了个羊闯第二关</title>
 	<script src="https://cdn.bootcss.com/jquery/3.2.1/jquery.min.js"></script>
 	<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 	<link href="//unpkg.com/layui@2.7.6/dist/css/layui.css" rel="stylesheet">
