--- a/ylgy.html
+++ b/ylgy.html
@@ -18,7 +18,7 @@ h2 {margin: 2rem;}
 </head>
 <body>
 
-	<h2 align="center">羊了个羊闯第二关</h2>
+	<h2 align="center">羊了个羊闯第二关（限免）</h2>
 	<div class="layui-form">
 
   <div class="layui-form-item">
