--- a/ylgy.html
+++ b/ylgy.html
@@ -14,6 +14,18 @@ h2 {margin: 2rem;}
 .layui-form {margin-right: 3rem;margin-left: -3rem;}
 .layui-input-block{margin-top: 1rem;}
 </style>
+	
+	
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?c95b5485a65c70d2cbb9d74f4253459d";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
+
 
 </head>
 <body>
