--- a/ylgy.html
+++ b/ylgy.html
@@ -30,7 +30,7 @@ var _hmt = _hmt || [];
 </head>
 <body>
 
-	<h2 align="center">羊了个羊闯第二关（限免）</h2>
+	<h2 align="center">羊了个羊闯第二关（项目暂停中）</h2>
 	<div class="layui-form">
 
   <div class="layui-form-item">
